fix: update scrollbar thumb background color for improved aesthetics

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body::-webkit-scrollbar-thumb {
   appearance: none;
   width: 15px;
   border-radius: 10px;
-  background-color: rgb(63, 63, 255);
+  background-color: #0051B8;
 }
 
 
